[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/ammo/shotgunammov01.png" type="Texture" id=1]
[ext_resource path="res://assets/ammo/rifleammov01.png" type="Texture" id=2]
[ext_resource path="res://items/ammo/Ammo.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 40 )

[node name="Ammo" type="Area2D"]
scale = Vector2( 0.75, 0.75 )
collision_layer = 16
script = ExtResource( 3 )

[node name="RifleSprite" type="Sprite" parent="."]
scale = Vector2( 1, 1 )
texture = ExtResource( 2 )

[node name="ShotgunSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 16 )
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
